{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 245,
  "lineage": "6b5f6ee3-22ee-b923-cf75-95ee1b236809",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:security-group/sg-0a7da81531d841d57",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a7da81531d841d57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow-all-traffic",
            "name_prefix": "",
            "owner_id": "123096254985",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:security-group/sg-0a38b6a8d4b939ff0",
            "description": "only ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a38b6a8d4b939ff0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.8.128.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-instance-traffic",
            "name_prefix": "",
            "owner_id": "123096254985",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:123096254985:instance/i-0aeeb4965764fbf2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aeeb4965764fbf2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b375ad59f5c9943a",
            "private_dns": "ip-10-8-138-255.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.138.255",
            "public_ip": "44.195.25.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0343630f899a4078f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035f6cfa201554e23",
            "tags": {
              "Name": "bastion[count.index]"
            },
            "tags_all": {
              "Name": "bastion[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7da81531d841d57"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.allow_all",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24",
            "tls_private_key.rsa"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:123096254985:instance/i-0744e18b21c180016",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0744e18b21c180016",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c8b2fba6ccd45a6",
            "private_dns": "ip-10-8-123-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.123.229",
            "public_ip": "54.81.198.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7827a4fc8b826b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c24cc931b1d1c1ff",
            "tags": {
              "Name": "bastion[count.index]"
            },
            "tags_all": {
              "Name": "bastion[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7da81531d841d57"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.allow_all",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:123096254985:instance/i-0e311048da8bfef42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e311048da8bfef42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0536696dad59cd062",
            "private_dns": "ip-10-8-0-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.0.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091febe557f8a5550",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9754924a4681cb8",
            "tags": {
              "Name": "private[count.index]"
            },
            "tags_all": {
              "Name": "private[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a38b6a8d4b939ff0"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.allow_all",
            "aws_security_group.private_subnet_sg",
            "module.subnet.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.batch24",
            "tls_private_key.rsa"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:123096254985:instance/i-0f419966f158f4cea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f419966f158f4cea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041dcfdbd13f23b9e",
            "private_dns": "ip-10-8-0-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.0.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8158002b7139da0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f91a81827371877c",
            "tags": {
              "Name": "private[count.index]"
            },
            "tags_all": {
              "Name": "private[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a38b6a8d4b939ff0"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.allow_all",
            "aws_security_group.private_subnet_sg",
            "module.subnet.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.batch24",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:internet-gateway/igw-0658464e094162b79",
            "id": "igw-0658464e094162b79",
            "owner_id": "123096254985",
            "tags": {
              "Name": "ninja-igw-01"
            },
            "tags_all": {
              "Name": "ninja-igw-01"
            },
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b30a9be5210cef4",
            "association_id": "eipassoc-0ef334ef53013cfa5",
            "domain": "vpc",
            "id": "eipalloc-00b30a9be5210cef4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-069adec44718f183a",
            "private_dns": "ip-10-8-159-207.ec2.internal",
            "private_ip": "10.8.159.207",
            "public_dns": "ec2-52-1-220-10.compute-1.amazonaws.com",
            "public_ip": "52.1.220.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b30a9be5210cef4",
            "association_id": "eipassoc-0ef334ef53013cfa5",
            "connectivity_type": "public",
            "id": "nat-02792d3bbe33bb818",
            "network_interface_id": "eni-069adec44718f183a",
            "private_ip": "10.8.159.207",
            "public_ip": "52.1.220.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035f6cfa201554e23",
            "tags": {
              "Name": "ninja-nat-01"
            },
            "tags_all": {
              "Name": "ninja-nat-01"
            }
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.access",
            "module.nat.aws_eip.lb",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4b1af99560db6de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02792d3bbe33bb818",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4b1af99560db6de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.access",
            "module.nat.aws_eip.lb",
            "module.nat.aws_nat_gateway.example",
            "module.route_tables.aws_route_table.private",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0658464e094162b79",
            "id": "r-rtb-0ea9640049aa2db281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea9640049aa2db28",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.access",
            "module.route_tables.aws_route_table.public",
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:route-table/rtb-0e4b1af99560db6de",
            "id": "rtb-0e4b1af99560db6de",
            "owner_id": "123096254985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02792d3bbe33bb818",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:route-table/rtb-0ea9640049aa2db28",
            "id": "rtb-0ea9640049aa2db28",
            "owner_id": "123096254985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0658464e094162b79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da94d3baefb01eb",
            "route_table_id": "rtb-0e4b1af99560db6de",
            "subnet_id": "subnet-0b9754924a4681cb8"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private",
            "module.subnet.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddad30c3f099a05e",
            "route_table_id": "rtb-0e4b1af99560db6de",
            "subnet_id": "subnet-0f91a81827371877c"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private",
            "module.subnet.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042262227c8ebaf5d",
            "route_table_id": "rtb-0ea9640049aa2db28",
            "subnet_id": "subnet-035f6cfa201554e23"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053209e64388eb7c5",
            "route_table_id": "rtb-0ea9640049aa2db28",
            "subnet_id": "subnet-0c24cc931b1d1c1ff"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:subnet/subnet-0b9754924a4681cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.8.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9754924a4681cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123096254985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pri-sub-01"
            },
            "tags_all": {
              "Name": "ninja-pri-sub-01"
            },
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:subnet/subnet-0f91a81827371877c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.8.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f91a81827371877c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123096254985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pri-sub-02"
            },
            "tags_all": {
              "Name": "ninja-pri-sub-02"
            },
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:subnet/subnet-035f6cfa201554e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.8.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f6cfa201554e23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123096254985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-01"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-01"
            },
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:subnet/subnet-0c24cc931b1d1c1ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.8.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c24cc931b1d1c1ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123096254985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-02"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-02"
            },
            "vpc_id": "vpc-0c7539956d1306549"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.batch24"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "batch24",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123096254985:vpc/vpc-0c7539956d1306549",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-0b7cdb981751e7412",
            "default_route_table_id": "rtb-08de1a21704d20eae",
            "default_security_group_id": "sg-0088ba56d1a5d1d20",
            "dhcp_options_id": "dopt-085ca402356590561",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7539956d1306549",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08de1a21704d20eae",
            "owner_id": "123096254985",
            "tags": {
              "Name": "ninja-vpc-01"
            },
            "tags_all": {
              "Name": "ninja-vpc-01"
            }
          }
        }
      ]
    }
  ]
}